--- a/css/index.css
+++ b/css/index.css
@@ -36,15 +36,61 @@ a{
     text-decoration: none;
 }
 
-.headerimg{
-    background-image: url("images/purplechair.jpg");
-    background-size:cover;
-    background-repeat: no-repeat;
-    width:100%;
-    height: 270px;
-    
+.background{
+  max-width: 80%;
 }
 .header-text{
     text-align: center;
     padding-top:130px;
+}
+.container{
+    position: relative;
+    text-align: center;
+}
+.centered{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+img{
+    width:500px;
+}
+
+#skills {
+    text-align: center;
+    grid-column-start:1;
+    grid-column-end:3;
+}
+#links{
+    text-align: center;
+    grid-column-start:1;
+    grid-column-end:3;
+}
+#work{
+    text-align: center;
+    grid-column-start:1;
+    grid-column-end:3;
+}
+.contactme{
+    max-width: 80%;
+    text-align: center;
+}
+
+.social{
+    text-align: center;
+    width:30px;
+}
+section{
+    text-align: center;
+}
+div{
+    padding: 5px;
+}
+footer{
+    text-align: center;
 }
