--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,6 @@ li{
    
 }
 ul{
- 
     display:flex;
     justify-content:space-between;
     margin:0 auto;
@@ -36,9 +35,6 @@ a{
     text-decoration: none;
 }
 
-.background{
-  max-width: 80%;
-}
 .header-text{
     text-align: center;
     padding-top:130px;
@@ -96,3 +92,117 @@ footer{
     text-align: center;
 }
 
+.carousel-inner {
+    background: black;
+}
+.carousel-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    color: white;
+}
+
+.container {
+    background-image:url("images/blacksand.jpg"); 
+    background-image:cover;
+}
+
+@media only screen and (max-device-width: 530px) {
+    
+.wrapper {
+    width: 100%px;
+}
+
+.container {
+    height: 90%;
+    position: relative;
+    
+}
+body {
+    max-width:100%;
+    margin:0 auto;
+}
+
+.navbar{
+    float:left;
+    width: auto;
+ }
+ 
+}
+
+.logo{
+    max-width: 20%; 
+    float:left;
+   
+}
+ul{
+    display:flex;
+    justify-content:space-between;
+    margin:0 auto;
+    padding:20px 40px;
+}
+
+a{
+    text-decoration: none;
+}
+
+.header-text{
+    text-align: center;
+    padding-top:130%;
+}
+.container{
+    position: relative;
+    text-align: center;
+}
+.centered{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+img{
+    width:100%;
+}
+
+#newyork {
+    text-align: center;
+    grid-column-start:1;
+    grid-column-end:3;
+}
+#bangkok{
+    text-align: center;
+    grid-column-start:1;
+    grid-column-end:3;
+}
+#london{
+    text-align: center;
+    grid-column-start:1;
+    grid-column-end:3;
+}
+.contactme{
+    max-width: 40%;
+    text-align: center;
+}
+
+.social{
+    text-align: center;
+    width:20%;
+}
+
+.carousel-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    color: white;
+}
+.social{
+    text-align: center;
+    width:30%;
+}
